Starting to work on bootstrap styling, links are fixed, relationships fixed, genre model added.

--- a/Ticketbase/appsettings.json
+++ b/Ticketbase/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TicketbaseContext": "Server=(localdb)\\mssqllocaldb;Database=TicketbaseContext-bbd186d3-42ca-4dcf-8f12-04a51f68876c;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
