Username/password updated

--- a/Ticketbase/appsettings.json
+++ b/Ticketbase/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TicketbaseContext": "Server=(localdb)\\mssqllocaldb;Database=TicketbaseContext-bbd186d3-42ca-4dcf-8f12-04a51f68876c;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"TicketbaseContext": "Server=(localdb)\\mssqllocaldb;Database=TicketbaseContext-bbd186d3-42ca-4dcf-8f12-04a51f68876c;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TicketbaseContext": "Server=tcp:nscc-0489720-sql-server.database.windows.net,1433;Initial Catalog=nscc-0489720-sql-database;Persist Security Info=False;User ID=Nsccadmin123;Password=Nsccadmin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
