--- a/Ticketbase/Ticketbase.csproj
+++ b/Ticketbase/Ticketbase.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>e2733949-24f1-448b-8b2a-377c665e0622</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
